cds-ui/designer-client/src/styles.css
/* ... */
/*Page Title*/
.page-title{
  padding: 20px 30px;
  background:#fff;
  border-left: solid 1px #FAFAFA;
  margin-bottom: 21px;
  -webkit-box-shadow: 0 4px 10px 0 #eef0f5;
  box-shadow: 0 4px 10px 0 #eef0f5;
  position: relative;
  z-index: 300;
  /* position: fixed;
  width: calc(100% - 50px); */
}
.page-title h2{
  font-size: 16px;
  font-weight: bold;
  padding-top: 1px;
}
.page-title h2 span{
  color: #6B7D93;
  font-size: 14px;
}
/*Content*/
.body-container{
  padding: 0 30px !important;
}
.body-container > .container{
  padding: 0;
}
.search-filter-col{
  padding-right: 0 !important;
  border-bottom: solid 1px #ECEDF2 !important;
}
/**Packages Filter**/
.packagesFilter{
  margin-top: 12px;
  margin-bottom: 7px;
  z-index: 220 !important;
}
.packagesFilter .dropdown-toggle{
  height: 36px !important;
}
.packagesFilter .dropdown-toggle:focus ~ .dropdown-text::after{
  border-color: transparent transparent #1B3E6F transparent;
}
.packagesFilter .dropdown-text{
  background: transparent;
  border: 0;
  box-shadow: none;
  text-indent: 14px;
  line-height: 30px;
  font-size: 12px;
}
.packagesFilter .dropdown-text::after{
  right: 12px;
  border: solid !important;
  border-width: 5px 4px 0 4px !important;
  border-color: #1B3E6F transparent transparent transparent !important;
}
.packagesFilter .dropdown-toggle:hover ~ .dropdown-text,
.packagesFilter .dropdown-toggle:focus ~ .dropdown-text{
  background-color: transparent;
  box-shadow: none;
  border-radius: 0;
}
.packagesFilter .dropdown-toggle:focus ~ .dropdown-text{
  background: #fff;
  box-shadow: 0 2px 6px 0 rgba(47, 83, 151, .15);
}
.packagesFilter .dropdown-text::after{
  top: 12px;
}
.packagesFilter .dropdown-content{
  padding: 6px 0;
  background: #fff;
  box-shadow: 0 2px 6px 0 rgba(47, 83, 151, .15);
  border: 0;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  border-bottom-left-radius: 2px;
  border-bottom-right-radius: 2px;
}
.packagesFilter .dropdown-content ul{
  max-height: 200px;
  overflow-y: auto;
  padding-left: 0;
}
.packagesFilter .dropdown-content li{
  list-style: none;
}
.packagesFilter .dropdown-content li:hover .custom-checkbox{
  cursor: pointer;
}
.packagesFilter .dropdown-content:hover,
.packagesFilter .dropdown-toggle:focus ~ .dropdown-content{
  top: 30px;
}
.packagesFilter .form-control{
  padding: 12px 9px 12px 38px !important;
  border: 0 !important;
  border-bottom: solid 1px #D7E7F9 !important;
  background: url(../src/assets/img/icon-search.svg) 15px center no-repeat;
  background-size: 4%;
  border-radius: 0 !important;
  color: #1B3E6F;
  font-size: 13px;
}
.packagesFilter .form-control::placeholder{
  color: #71777F;
}
.packagesFilter .form-control:focus{
  box-shadow: none !important;
  border-bottom: solid 1px #1B3E6F !important;
}
.packagesFilter .custom-checkbox{
  margin-left: 8px;
}
.packagesFilter .custom-control-input{
  left: 10px;
}
.packagesFilter .custom-control-label{
  line-height: 28px !important;
  font-size: 13px !important;
  text-indent: 6px !important;
}
.fillteredTags{
  margin-left: 3px;
  padding: 3px 3px;
  background: #C3CDDB;
  color: #1B3E6F;
  font-weight: bold;
  border-radius: 4px;
}
.fillteredTags:empty{
  visibility: hidden;
}
/**Packages Sort**/
.sort-packages{
  font-size: 12px;
  font-weight: bold;
  color: #6B7D93;
}
.sort-packages .dropdown{
  width: 88px;
}
.sort-packages .dropdown-text{
  background: transparent;
  border: 0;
  box-shadow: none;
  color: #1B3E6F;
}
.sort-packages .dropdown-text::after{
  border-color: #1B3E6F transparent transparent transparent;
}
.sort-packages .dropdown-toggle:focus ~ .dropdown-text::after{
  border-color: transparent transparent #1B3E6F transparent;
}
.sort-packages .dropdown-toggle:hover ~ .dropdown-text,
.sort-packages .dropdown-toggle:focus ~ .dropdown-text{
  box-shadow: 0 2px 6px 0 rgba(47, 83, 151, .15);
  background: #fff;
}
.sort-packages .dropdown-content:hover,
.sort-packages .dropdown-toggle:focus ~ .dropdown-content{
  top: 30px;
}
.sort-packages .dropdown-content{
  width: 88px;
  padding: 6px 0;
  background: #fff;
  border-radius: 2px;
  border: 0;
  box-shadow: 0 2px 6px 0 rgba(47, 83, 151, .15);
}
.sort-packages .dropdown-content a{
  color: #1B3E6F;
  font-size: 12px;
}
.sort-packages .dropdown-content a:hover{
  background-color: #F4F9FE;
  text-decoration: unset;
}
/**Pagination**/
.page-item .page-link,
.page-item.disabled .page-link{
  background: transparent !important;
  border: 0;
  color: #1B3E6F !important;
  font-size: 14px;
}
.page-link:hover{
  color: #1B3E6F !important;
  background-color: #fff !important;
  border-radius: 100%;
  transition: 0.3s;
  box-shadow: 0 2px 6px 0 rgba(47, 83, 151, 0.12);
}
.page-item.disabled{
  opacity: .55;
}
/**Packages Cards***/
/***Package Info Card***/
.packages-card .card{
  margin: 0;
  border-radius: 2px;
  border: 0;
  box-shadow: 0 2px 6px 0 rgba(47, 83, 151, 0.12);
}
.packages-card .card:hover{
  box-shadow: 0 2px 13px 6px rgba(47, 83, 151, .17);
  transition: all 0.5s ease;
  cursor: pointer;
}
.packages-card .card:hover .card-title,
.packages-card .card:hover .card-title span{
  color: #1273EB !important;
}
.packages-card .card-title{
  margin-bottom: 0 !important;
  font-size: 14px;
  font-weight: bold;
}
.packages-card .card-title .packageName{
  margin-bottom: 0;
  display: inline-block;
  width: auto;
  max-width: 64%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 13px;
  vertical-align: bottom;
  color: #1B3E6F;
}
.packages-card .card-title:hover,
.packages-card .card-title:hover .packageName{
  text-decoration: none;
  color: #1273EB;
}
.packages-card .card-body{
  padding-bottom: 0 !important;
}
.packages-card .card-footer .col{
  padding-left: 3px !important;
  text-align: left;
}

/***Add Package Card***/
.addPaackage-card{
  background: #F4F9FE !important;
  border: solid 1px #D7E7F9 !important;
}
.addPaackage-card:hover{
  box-shadow: 0 2px 6px 0 rgba(47, 83, 151, 0.1) !important;
}
/* ... */

